fix: image frame alignment

--- a/index.css
+++ b/index.css
@@ -673,7 +673,7 @@ html {
   @media only screen and (max-width: 62.5em) {
     &:after {
       width: .5rem;
-      right: -.45rem;
+      right: -.5rem;
       bottom: 49%;
     }
   }
@@ -681,7 +681,7 @@ html {
   @media print {
     &:after {
       width: 1mm;
-      right: -1.2mm;
+      right: -1.3mm;
       bottom: 49%;
     }
   }
@@ -726,8 +726,12 @@ html {
     @media only screen and (max-width: 62.5em) {
       width: .5rem;
       height: .5rem;
-      top: -.5rem;
+      top: -.45rem;
       right: 49%;
+    }
+
+    @media only screen and (max-width: 37.5em) {
+      top: -.5rem;
     }
 
     @media print {
